Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-26978

Unit test failed with "fdb_anomaly_test........*** Exception

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.1.0, 5.5.0
    • 5.1.0, 5.5.0
    • forestdb
    • Untriaged
    • Yes

    Description

      Unit test failed with the following errors:
      13:28:00 2017-11-22T12:12:03.274-08:00 [INFO][FDB] Forestdb opened database file anomaly_test1
      13:28:00 2017-11-22T12:12:03.341-08:00 [ERRO][FDB] Error in WRITE on a database file 'anomaly_test1', errno = -2: 'Unknown error -2'
      13:28:00 2017-11-22T12:12:03.342-08:00 [ERRO][FDB] Error in writing a doc block with id 1651, offset 1276, size 3898 to a database file 'anomaly_test1'
      13:28:00 2017-11-22T12:12:03.342-08:00 [ERRO][FDB] Error in WRITE on a database file 'anomaly_test1', errno = -2: 'Unknown error -2'
      13:28:00 2017-11-22T12:12:03.342-08:00 [ERRO][FDB] Error in WRITE on a database file 'anomaly_test1', errno = -2: 'Unknown error -2'
      13:28:00 2017-11-22T12:12:03.342-08:00 [ERRO][FDB] Error in appending a doc block marker for a block id 1653 into a database file 'anomaly_test1'

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              wayne Wayne Siu
              wayne Wayne Siu
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty